--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -185,6 +185,7 @@
     <ClCompile Include="src\OtherMethod\LBM\LBMSolver2.cpp" />
     <ClCompile Include="src\OtherMethod\MPM\MPMSolver2.cpp" />
     <ClCompile Include="src\OtherMethod\PBF\PBFSolver2.cpp" />
+    <ClCompile Include="src\OtherMethod\SWE\ShallowWaveSolver2.cpp" />
     <ClCompile Include="src\Size2.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -263,6 +264,8 @@
     <ClInclude Include="src\OtherMethod\PBF\PBFData2.h" />
     <ClInclude Include="src\OtherMethod\PBF\PBFSolver2.h" />
     <ClInclude Include="src\OtherMethod\PCISPH\PCISPHSolver2.h" />
+    <ClInclude Include="src\OtherMethod\SWE\ShallowWaveData2.h" />
+    <ClInclude Include="src\OtherMethod\SWE\ShallowWaveSolver2.h" />
     <ClInclude Include="src\random.h" />
     <ClInclude Include="src\Size2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemData2.h" />
