--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -153,6 +153,12 @@
     <ClCompile Include="src\Geometry\Heart2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\OtherMethod\SWE\ShallowWaveSolver2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Matrix3x3.hpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vector2.hpp">
@@ -399,6 +405,15 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\Geometry\Heart2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OtherMethod\SWE\ShallowWaveData2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OtherMethod\SWE\ShallowWaveSolver2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Vector3.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
