--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -428,5 +428,8 @@
     <ClInclude Include="src\Geometry\RegularPolygon.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\Timer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
