--- a/Voronoi2D/Voronoi2D.vcxproj.filters
+++ b/Voronoi2D/Voronoi2D.vcxproj.filters
@@ -15,8 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="VortexParticles2d.cpp">
+    <ClCompile Include="Voronoi2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Voronoi2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="VoronoiData2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
