--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="FoamVortexSolver.h" />
     <ClInclude Include="MovingFaceCenteredGrid2.h" />
     <ClInclude Include="Shader\shader.h" />
+    <ClInclude Include="vp2005Data.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="2.2.basic_lighting.fs" />
