--- a/Voronoi2D/Voronoi2D.vcxproj.filters
+++ b/Voronoi2D/Voronoi2D.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="bubbleSolver2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Voronoi2.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="VoronoiData2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="bubbleData2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="bubbleSolver2.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
