--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -431,5 +431,8 @@
     <ClInclude Include="src\Timer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\mesh\objout.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
