--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -434,5 +434,8 @@
     <ClInclude Include="src\mesh\objout.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\mesh\Plyout.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
