--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="vp2005test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="couplingTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader\shader.h">
