--- a/vortex_particles_twoway_coupling/vortex_particles_twoway_coupling.vcxproj
+++ b/vortex_particles_twoway_coupling/vortex_particles_twoway_coupling.vcxproj
@@ -140,6 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="quadtreeTest.cpp" />
     <ClCompile Include="twoway_test.cpp" />
     <ClCompile Include="VortexParticleSolver2.cpp" />
   </ItemGroup>
