--- a/vortex_particles_twoway_coupling/vortex_particles_twoway_coupling.vcxproj.filters
+++ b/vortex_particles_twoway_coupling/vortex_particles_twoway_coupling.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="VortexParticleSolver2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="quadtreeTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VortexParticleSolver2.h">
