--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="src\Geometry\RegularPolygon.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\OtherMethod\RigidBody\RigidBodySolver2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vector2.hpp">
@@ -450,6 +453,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\OtherMethod\VortexParticles\VortexTreeCode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OtherMethod\RigidBody\RigidBodySolver2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OtherMethod\RigidBody\RigidBodyData2.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
